解决本地编译报错